...
            "state": "translated",
            "value": "Vui lòng hoàn tất đăng nhập từ tab Tài khoản của tôi."
          }
        }
      }
    },
    "내 글": {
      "extractionState": "stale",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "My Posts"
...
            "state": "translated",
            "value": "Đã đổi thời gian đăng"
          }
        }
      }
    },
    "완전히 숨기기": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Hide completely"
          }
...
            "state": "translated",
            "value": "Thu gọn"
          }
        }
      }
    },
    "정지": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Suspend"
          }
...
            "state": "translated",
            "value": "Đình chỉ"
          }
        }
      }
    },
    "정지로 올리기": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Raise to suspend"
          }
...
            "state": "translated",
            "value": "Đình chỉ?"
          }
        }
      }
    },
    "제한": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Limit"
          }
...
            "state": "translated",
            "value": "Máy chủ đã chặn"
          }
        }
      }
    },
    "차단한 서버가 없어요": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "No blocked servers"
          }
...
            "state": "translated",
            "value": "Tự động đăng vào thời điểm đã chọn."
          }
        }
      }
    },
    "설정": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
          }
...
            "state": "translated",
            "value": "Đã hiểu, đăng"
          }
        }
      }
    },
    "알림": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Notifications"
          }
...
            "state": "translated",
            "value": "Chặn"
          }
        }
      }
    },
    "차단 해제": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Unblock"
          }
...
            "state": "translated",
            "value": "Mẹo"
          }
        }
      }
    },
    "팔로우": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Follow"
          }
...
            "state": "translated",
            "value": "Ẩn số người theo dõi"
          }
        }
      }
    },
    "팔로잉": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Following"
          }
...
            "state": "translated",
            "value": "Khi ai đó trích dẫn ghi chú của bạn trong một bài viết"
          }
        }
      }
    },
    "내 노트": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Your notes"
          }
...
